--- a/minu-page.css
+++ b/minu-page.css
@@ -6,6 +6,7 @@
     align-items: center;
     font-family: 'Noto Sans KR', sans-serif !important;
     font-size: 2.5vmin;
+    word-break: keep-all;
 }
 .content {
     font-size: 100%;
