--- a/minu-page.css
+++ b/minu-page.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Noto Sans KR', sans-serif !important;
+    font-family: 'Pretendard', sans-serif !important;
     font-size: 2.5vmin;
     word-break: keep-all;
 }
@@ -164,6 +164,14 @@ li {
 
 .red-back {
     background-color: rgb(247, 229, 228);
+}
+
+.black {
+    color: rgb(0, 0, 0);
+}
+
+.white {
+    color: rgb(255, 255, 255);
 }
 
 .gray {
